# cpp-lib-01

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  library.json  platformio.ini  readme.adoc
cmake/: Config.cmake.in
config/: CMakeLists.txt
config/cmake/: fgt-config-lib-Config.cmake.in
config/include/fgt/: config.h
config/include/fgt/config/: ConfigItem.h  ConfigItems.h  defines.h
config/src/: defines.cpp  library.json
examples/: .gitignore
examples/example-01/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
examples/example-01/doc/: vcpkg-configuration.json
examples/example-01/src/: main.cpp
examples/example-02/: CMakeLists.txt
examples/example-02/include/: ExampleConfig.h
examples/example-02/src/: main.cpp
include/: debug.h
include/fgt/: util.h
include/fgt/util/: AnalogInputPin.h  Array.h  Assert.h  Attributes.h  Bool.h  Buffer.h  Buffer2.h  BufferLineReader.h  BufferReader.h  BufferUtil.h  Callback.h  Callback2.h  Callback3.h  Circle.h  CodecUtil.h  Counter.h  Debug.h  DigitalInputPin.h  Directory.h  DirectoryNavigator.h  EnumType.h  ErrorListener.h  EventCenter.h  Filter.h  Float.h  FlyWeight.h  Format.h  HashTable.h  HexReader.h  Input.h  Iterator.h  Keys.h  Lang.h  Led.h  LineReader.h  LinkedList.h  Logger.h  LoggerFactory.h  Math.h  MovePtr.h  (+31 more)
include/fgt/util/example/: FloatFormatExample.h
lib/config/: library.json
lib/config/examples/: example1.cpp
lib/config/include/fgt/: config.h
lib/config/include/fgt/config/: ConfigItem.h  ConfigItems.h
lib/util/: library.json
lib/util/examples/: example1.cpp
lib/util/include/fgt/: util.h
lib/util/include/fgt/util/: AnalogInputPin.h  Array.h  Assert.h  Bool.h  Buffer.h  Buffer2.h  BufferLineReader.h  BufferReader.h  BufferUtil.h  Callback.h  Callback2.h  Callback3.h  Circle.h  CodecUtil.h  DigitalInputPin.h  Directory.h  DirectoryNavigator.h  EnumType.h  ErrorListener.h  EventCenter.h  Filter.h  Float.h  FlyWeight.h  Format.h  HashTable.h  HexReader.h  Input.h  Iterator.h  Lang.h  Led.h  LineReader.h  LinkedList.h  Logger.h  LoggerFactory.h  Math.h  MultiWriter.h  Options.h  Output.h  OutputWriter.h  Pair.h  (+23 more)
lib/util/include/fgt/util/example/: FloatFormatExample.h
lib/util/src/: Attributes.cpp  Counter.cpp  Format.cpp  Logger.cpp  Math.cpp  Rate.cpp  String.cpp
src/: Math.cpp  String.cpp  main.cpp
util/: CMakeLists.txt  library.json
util/cmake/: fgt-util-lib-Config.cmake.in
util/include/fgt/: util.h
util/include/fgt/util/: AnalogInputPin.h  Array.h  Assert.h  Attributes.h  Bool.h  Buffer.h  Buffer2.h  BufferLineReader.h  BufferReader.h  BufferUtil.h  Circle.h  CodecUtil.h  Counter.h  Debug.h  DigitalInputPin.h  Directory.h  DirectoryNavigator.h  EnumType.h  ErrorListener.h  EventCenter.h  Float.h  FlyWeight.h  Format.h  HashTable.h  HexReader.h  Input.h  Keys.h  Led.h  LineReader.h  LinkedList.h  Logger.h  LoggerFactory.h  MovePtr.h  MovingAvg.h  MultiWriter.h  Options.h  Output.h  OutputWriter.h  Point2.h  Properties.h  (+22 more)
util/include/fgt/util/example/: FloatFormatExample.h
util/src/: Attributes.cpp  Counter.cpp  Format.cpp  Logger.cpp  Math.cpp  Rate.cpp  defines.cpp  util.cpp
vcpkg/ports/fgt-cpp-lib-01/: portfile.cmake  vcpkg.json
vcpkg/versions/: baseline.json
vcpkg/versions/f-/: fgt-cpp-lib-01.json
